--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,26 @@
+NODE_ENV=development
+PORT=3000
+
 # Database
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_NAME=
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=your_password_here
+DATABASE_NAME=auth_service
 
 # JWT
-JWT_SECRET=
-JWT_EXPIRATION=
-REFRESH_TOKEN_EXPIRATION=
+JWT_SECRET=your_jwt_secret_here
+JWT_EXPIRATION=1h
 
 # Google OAuth
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_CALLBACK_URL=
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 
 # Rate Limiting
-THROTTLE_TTL=
-THROTTLE_LIMIT=
+THROTTLE_TTL=60
+THROTTLE_LIMIT=10
 
-# pgAdmin
-PGADMIN_DEFAULT_EMAIL=
-PGADMIN_DEFAULT_PASSWORD=
+# PgAdmin
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=admin
