--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,9 @@ services:
     ports:
       - "3000:3000"
     env_file:
-      - .env.${NODE_ENV:-development}
+      - .env
+    environment:
+      - NODE_ENV=development
     depends_on:
       - postgres
 
