--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:create": "npm run typeorm migration:create",
     "migration:generate": "npm run typeorm migration:generate -d typeorm.config.ts",
-    "migration:run": "npm run typeorm migration:run -d typeorm.config.ts",
+    "migration:run": "npx typeorm-ts-node-commonjs migration:run -d ./typeorm.config.ts",
     "migration:revert": "npm run typeorm migration:revert -d typeorm.config.ts"
   },
   "dependencies": {
