--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,25 @@
-NODE_ENV=development
-PORT=3000
-
 # Database
-DATABASE_HOST=localhost
+DATABASE_HOST=postgres
 DATABASE_PORT=5432
 DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=your_password_here
+DATABASE_PASSWORD=postgres
 DATABASE_NAME=auth_service
 
 # JWT
-JWT_SECRET=your_jwt_secret_here
-JWT_EXPIRATION=1h
+JWT_SECRET=your_jwt_secret
+JWT_EXPIRES_IN=3600
+JWT_REFRESH_SECRET=your_jwt_refresh_secret
+JWT_REFRESH_EXPIRES_IN=604800
 
 # Google OAuth
-GOOGLE_CLIENT_ID=your_google_client_id_here
-GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 
 # Rate Limiting
-THROTTLE_TTL=60
-THROTTLE_LIMIT=10
+RATE_LIMIT_TTL=60
+RATE_LIMIT_LIMIT=10
 
-# PgAdmin
+# pgAdmin
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=admin
