--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs",
-    "migration:create": "npm run typeorm migration:create",
-    "migration:generate": "npm run typeorm migration:generate -d typeorm.config.ts",
-    "migration:run": "npx typeorm-ts-node-commonjs migration:run -d ./typeorm.config.ts",
-    "migration:revert": "npm run typeorm migration:revert -d typeorm.config.ts"
+    "typeorm:create": "typeorm migration:create src/migrations/",
+    "typeorm:generate": "typeorm migration:generate -d ./typeorm.config.ts",
+    "typeorm:run": "typeorm migration:run -d ./typeorm.config.ts",
+    "typeorm:revert": "typeorm migration:revert -d ./typeorm.config.ts",
+    "migration:create": "docker-compose exec auth-service npm run typeorm:create",
+    "migration:generate": "docker-compose exec auth-service npm run typeorm:generate",
+    "migration:run": "docker-compose exec auth-service npm run typeorm:run",
+    "migration:revert": "docker-compose exec auth-service npm run typeorm:revert"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
