--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - NODE_ENV=${NODE_ENV:-development}
     depends_on:
       - postgres
+    volumes:
+      - ./src/migrations:/app/src/migrations
 
   postgres:
     image: postgres:15-alpine
