test format code example

--- a/.env.example
+++ b/.env.example
@@ -12,14 +12,14 @@ JWT_REFRESH_SECRET=your_jwt_refresh_secret
 JWT_REFRESH_EXPIRES_IN=604800
 
 # Google OAuth
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
-GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+GOOGLE_CLIENT_ID=change-in-production
+GOOGLE_CLIENT_SECRET=change-in-production
+GOOGLE_CALLBACK_URL=https://your-domain.com/auth/google/callback
 
 # Rate Limiting
-RATE_LIMIT_TTL=60
-RATE_LIMIT_LIMIT=10
+THROTTLE_TTL=60
+THROTTLE_LIMIT=10
 
-# pgAdmin
-PGADMIN_DEFAULT_EMAIL=admin@admin.com
-PGADMIN_DEFAULT_PASSWORD=admin
+# Application
+PORT=3000
+NODE_ENV=development
