fix refresh token logic

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs",
     "typeorm:create": "typeorm migration:create src/migrations/",
-    "typeorm:generate": "typeorm migration:generate -d ./typeorm.config.ts",
-    "typeorm:run": "typeorm migration:run -d ./typeorm.config.ts",
-    "typeorm:revert": "typeorm migration:revert -d ./typeorm.config.ts",
+    "typeorm:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -d ./typeorm.config.ts",
+    "typeorm:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./typeorm.config.ts",
+    "typeorm:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert -d ./typeorm.config.ts",
     "migration:create": "docker-compose exec auth-service npm run typeorm:create",
     "migration:generate": "docker-compose exec auth-service npm run typeorm:generate",
     "migration:run": "docker-compose exec auth-service npm run typeorm:run",
