--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
     depends_on:
       - postgres
     volumes:
-      - ./src/migrations:/app/src/migrations
+      - .:/app
+    command: npm run start:dev
 
   postgres:
     image: postgres:15-alpine
