--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ JWT_REFRESH_EXPIRES_IN=604800
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+FRONTEND_URL=http://localhost:8080
 
 # Rate Limiting
 RATE_LIMIT_TTL=60
