--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+NODE_ENV=dev
+APP_PORT=3000
+DOMAIN_NAME=localhost
+
 # Database
 DATABASE_HOST=postgres
 DATABASE_PORT=5432
@@ -7,19 +11,15 @@ DATABASE_NAME=auth_service
 
 # JWT
 JWT_SECRET=your_jwt_secret
-JWT_EXPIRES_IN=3600
+JWT_EXPIRES_IN=3600s
 JWT_REFRESH_SECRET=your_jwt_refresh_secret
-JWT_REFRESH_EXPIRES_IN=604800
+JWT_REFRESH_EXPIRES_IN=604800s
 
 # Google OAuth
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_CLIENT_ID=client-id
+GOOGLE_CLIENT_SECRET=client-secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 FRONTEND_URL=http://localhost:8080
-
-# Rate Limiting
-RATE_LIMIT_TTL=60
-RATE_LIMIT_LIMIT=10
 
 # pgAdmin
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
