--- a/nginx/conf.d/dev.conf
+++ b/nginx/conf.d/dev.conf
@@ -1,13 +1,21 @@
-upstream auth_service {
-    server auth-service:${APP_PORT};
+upstream auth_service_dev {
+    server auth-service-dev:${APP_PORT};
 }
 
 server {
-    listen 80;
+    listen 8080;
     server_name ${DOMAIN_NAME};
 
+    # Serve static files
     location / {
-        proxy_pass http://auth_service;
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Proxy API requests to auth-service
+    location /auth {
+        proxy_pass http://auth_service_dev;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -17,9 +25,4 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-
-    # SSL configuration will be added here when certificates are available
-    # listen 443 ssl;
-    # ssl_certificate /etc/nginx/ssl/cert.pem;
-    # ssl_certificate_key /etc/nginx/ssl/key.pem;
 } 
