--- a/.gitignore
+++ b/.gitignore
@@ -37,11 +37,9 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.development
-.env.development.local
+.env.dev
 .env.test.local
-.env.production
-.env.production.local
+.env.prod
 .env.local
 
 # temp directory
@@ -56,3 +54,4 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+.env.dev
