--- a/nginx/conf.d/dev.conf
+++ b/nginx/conf.d/dev.conf
@@ -1,10 +1,10 @@
 upstream auth_service_dev {
-    server auth-service-dev:${APP_PORT};
+    server auth-service-dev:3000;
 }
 
 server {
     listen 8080;
-    server_name ${DOMAIN_NAME};
+    server_name localhost;
 
     # Serve static files
     location / {
