--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,7 +4,7 @@ services:
   auth-service-prod:
     build:
       context: .
-      target: production
+      target: prod
     env_file:
       - .env.prod
     environment:
@@ -43,7 +43,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/conf.d/prod.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/conf.d/prod.conf:/etc/nginx/conf.d/prod.conf
       - ./nginx/ssl:/etc/nginx/ssl
       - ./index.html:/usr/share/nginx/html/index.html
     depends_on:
