--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,10 +1,10 @@
 upstream auth_service {
-    server auth-service:${APP_PORT};
+    server auth-service:3000;
 }
 
 server {
     listen 80;
-    server_name ${DOMAIN_NAME};
+    server_name localhost;
 
     location / {
         proxy_pass http://auth_service;
