--- a/nginx/conf.d/prod.conf
+++ b/nginx/conf.d/prod.conf
@@ -1,10 +1,10 @@
 upstream auth_service_prod {
-    server auth-service-prod:${APP_PORT};
+    server auth-service-prod:3000;
 }
 
 server {
     listen 80;
-    server_name ${DOMAIN_NAME};
+    server_name domain.com;
     
     # Redirect all HTTP requests to HTTPS
     return 301 https://$server_name$request_uri;
