--- a/nginx/conf.d/dev.conf
+++ b/nginx/conf.d/dev.conf
@@ -4,7 +4,7 @@ upstream auth_service_dev {
 
 server {
     listen 8080;
-    server_name localhost;
+    server_name dev.pulsarrift.net;
 
     # Serve static files
     location / {
