--- a/nginx/conf.d/prod.conf
+++ b/nginx/conf.d/prod.conf
@@ -4,7 +4,7 @@ upstream auth_service_prod {
 
 server {
     listen 80;
-    server_name domain.com;
+    server_name pulsarrift.net;
     
     # Redirect all HTTP requests to HTTPS
     return 301 https://$server_name$request_uri;
